# ocrdb

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  database.py  main.py  models.py  ocr.py  storage.py
frontend/: Dockerfile
frontend/src/: App.tsx
frontend/src/components/: DocumentList.tsx  SearchBar.tsx  UploadForm.tsx
frontend/src/lib/: api.ts
